style: Hide horizontal scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,12 @@ html::-webkit-scrollbar-thumb {
         inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
 
+::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
 @layer base {
     :root {
         --background: 0 0% 100%;
